--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -20,7 +20,7 @@
             <div class="activ-page"><a href="./miscellaneous.html">Misc.</a></div>
         </nav>
     </header>
-    <main class="myProjects">
+    <main class="black-bubble">
         <h2>Miscellaneous</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam asperiores
             recusandae aperiam alias, officia dolor quis officiis, necessitatibus commodi
